[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menus/Formula1-Regular_web_0.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Levels/Level_1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Skins/PlayerYellowSkin.tres" type="SpriteFrames" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )
main_game_scene = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 322.0
margin_bottom = 183.0
color = Color( 0.145098, 0.0901961, 0.607843, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = -20.0
margin_right = 350.0
margin_bottom = 183.0
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 100
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 50.0
margin_right = 270.0
margin_bottom = 158.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 170.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Pixel Platformer"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 170.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 7

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 170.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="New Game Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/MarginContainer"]
margin_left = 50.0
margin_right = 120.0
margin_bottom = 12.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "New Game"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 19.0
margin_right = 170.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Skin Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/MarginContainer2"]
margin_left = 50.0
margin_right = 120.0
margin_bottom = 13.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Change Skin"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 39.0
margin_right = 170.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Made By Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/MarginContainer3"]
margin_left = 50.0
margin_right = 120.0
margin_bottom = 13.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Made By"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 225, 131 )
frames = ExtResource( 4 )
animation = "idle"
playing = true
flip_h = true

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer2/MarginContainer/New Game Button" to="." method="_on_New_Game_Button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer2/MarginContainer2/Skin Button" to="." method="_on_Skin_Button_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/MarginContainer3/Made By Button" to="." method="_on_Made_By_Button_pressed"]
